unix/index-in.html unix/howtos/bugzilla-in.html
* Fixed some typos in unix/:
       unix/index-in.html
       unix/howtos/bugzilla-in.html
       unix/howtos/stable-cvs-get-in.html
       unix/howtos/stable-cvs-build-in.html
       admin/gimp-web-urls

--- a/unix/howtos/bugzilla.html
+++ b/unix/howtos/bugzilla.html
@@ -1,7 +1,8 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml"  -->
+<?xml version="1.0" encodings="iso-8859-1" standalone="yes"?><!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
+<!-- rewrite-attrs.py automatically generated this file from bugzilla-in.html.  Do not edit.-->
 <title>GIMP - How To Report GIMP Bugs</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml"  -->
-<!--#include virtual="/includes/wgo-howto-unix-init.xhtml"  -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-howto-unix-init.xhtml" -->
 <h1>EEK! A Bug!</h1>
 
 <h2>or How To Report GIMP Bugs</h2>
@@ -24,7 +25,7 @@
 </p>
 <p>
   Third: Check to see if your bug has been reported yet. Go to the 
-  <a home="http://bugzilla.gnome.org/buglist.cgi?product=GIMP&version=1.1.x&version=1.2&version=1.2.1&version=1.2.2&version=1.2.2-pre1&version=1.2.2-pre2&version=1.2.2-pre3&version=1.2.3-pre1&version=unspecified&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&form_name=query">Current Bug List</a> to see if 
+  <a href="http://bugzilla.gnome.org/buglist.cgi?product=GIMP&version=1.1.x&version=1.2&version=1.2.1&version=1.2.2&version=1.2.2-pre1&version=1.2.2-pre2&version=1.2.2-pre3&version=1.2.3-pre1&version=unspecified&bug_status=UNCONFIRMED&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&form_name=query">Current Bug List</a> to see if 
   something that looks like your bug has been reported yet. Don't worry if it 
   has, you can still help. See the section: <a href="#enhance">Enhancing Bug Reports</a>. 
   If you can't find something that sounds like your bug there, you will need to 
@@ -40,7 +41,7 @@
   <li>
     <p>
        Use <kbd>gimp --version</kbd> or the about dialog to check your GIMP 
-       version. Next check with <a home="http://www.gimp.org">www.gimp.org</a> to see 
+       version. Next check with <a href="http://www.gimp.org">www.gimp.org</a> to see 
        what the most recent GIMP release is. If your GIMP is old, update then 
        try to to reproduce the bug. Your bug may have been fixed in the most 
        recent release. If you are running GIMP from CVS, update your CVS and 
@@ -68,13 +69,13 @@
        English menu item name. It helps. (Developers generally understand 
        English) If you cannot reproduce the bug, assume it was some weird 
        freak event and don't report it. If it recurs, consult with your 
-       appropriate <a wgo="/mail_lists.html">user mailing list</a>. Perhaps 
+       appropriate <a href="/mail_lists.html">user mailing list</a>. Perhaps 
        someone else can find the key to reproducing it.
     </p>
   </li>
   <li>
     <p>
-       Prepare to face the horror. Go to <a home="http://bugzilla.gnome.org">bugzilla.gnome.org</a>. 
+       Prepare to face the horror. Go to <a href="http://bugzilla.gnome.org">bugzilla.gnome.org</a>. 
        If you don't have a login yet, follow the directions to create one. The 
        reason to do this and report a bug with your e-mail address is so the 
        developers can contact you if they have any questions. That way if we 
@@ -107,7 +108,7 @@
         <p>
            Select the appropriate &quot;component&quot;. If you don't know what component 
            it is, submit the bug under General. Descriptions of the components 
-           are <a home="http://bugzilla.gnome.org/describecomponents.cgi?product=GIMP">available</a>.
+           are <a href="http://bugzilla.gnome.org/describecomponents.cgi?product=GIMP">available</a>.
         </p>
      </li>
      <li>
@@ -130,7 +131,7 @@
      <li>
         <p>
            Select your &quot;operating system&quot;. <a href="wgo:wingimp">WinGIMP</a> and 
-           <a home="http://www.gimp.org/unix/">GNU/Linux GIMP</a> bugs are not always identical. It would be 
+           <a href="/unix/">GNU/Linux GIMP</a> bugs are not always identical. It would be 
            annoying to get a Linux GIMP developer trying to reproduce a WinGIMP-specific 
            bug. &quot;Under OS Details&quot; (OS, operating system), provide specifics 
            about the version of your operating system. For Linux, provide the distro and 
@@ -205,13 +206,13 @@
   or &quot;RESOLVED&quot;. Then you will know that some developer out there found 
   your bug, reproduced it, and fixed it. 
 </p>
-<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml" -->
     <div>
       <span id="footerleft">
-        How To Bugzilla &copy; 2002 <a mailto="bex@gimp.org">Rebecca J. Walter</a>
+        How To Bugzilla &copy; 2002 <a href="mailto:bex@gimp.org">Rebecca J. Walter</a>
       </span>
       <span id="footerright">
-        <a mailto="webmaster@gimp.org">webmaster@gimp.org</a>
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
