--- a/unix/howtos/stable-cvs-build.html
+++ b/unix/howtos/stable-cvs-build.html
@@ -1,7 +1,8 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml"  -->
+<?xml version="1.0" encodings="iso-8859-1" standalone="yes"?><!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
+<!-- rewrite-attrs.py automatically generated this file from stable-cvs-build-in.html.  Do not edit.-->
 <title>GIMP - Compile Your CVS Stable Tree</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml"  -->
-<!--#include virtual="/includes/wgo-howto-unix-init.xhtml"  -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-howto-unix-init.xhtml" -->
 <h1>CVS Is Not That Scary</h1>
 
 <h2>or Build Your Stable GIMP from CVS</h2>
@@ -10,7 +11,7 @@
 </p>
 <p>
    This document assumes you are working with a fresh gimp-1.2 cvs checkout as described in the 
-   <a href="wgo:unix-howtos_stable_cvs_get">CVS Is Not That Scary or Get Your Stable GIMP from CVS</a> how to. 
+   <a href="/unix/howtos/stable-cvs-get.html">CVS Is Not That Scary or Get Your Stable GIMP from CVS</a> how to. 
 </p>
 
 <h2>Check Your Build Tools</h2>
@@ -99,13 +100,13 @@ ftp://ftp.gnu.org/pub/gnu/config/.
 </p>
 <h2>Now type 'make' to compile GIMP.</h2>
 
-<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml" -->
     <div>
       <span id="footerleft">
-        How To Build Your Stable GIMP from CVS &copy; 2002 <a mailto="carol@gimp.org">Carol Spears</a>
+        How To Build Your Stable GIMP from CVS &copy; 2002 <a href="mailto:carol@gimp.org">Carol Spears</a>
       </span>
       <span id="footerright">
-        <a mailto="webmaster@gimp.org">webmaster@gimp.org</a>
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
