--- a/unix/howtos/stable-cvs-get.html
+++ b/unix/howtos/stable-cvs-get.html
@@ -1,7 +1,8 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml"  -->
+<?xml version="1.0" encodings="iso-8859-1" standalone="yes"?><!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
+<!-- rewrite-attrs.py automatically generated this file from stable-cvs-get-in.html.  Do not edit.-->
 <title>GIMP - How To Get the Stable GIMP from CVS</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml"  -->
-<!--#include virtual="/includes/wgo-howto-unix-init.xhtml"  -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-howto-unix-init.xhtml" -->
 <h1>CVS Is Not That Scary</h1>
 
 <h2>or Get Your Stable GIMP from CVS</h2>
@@ -75,16 +76,16 @@
 <h2>Compiling</h2>
 <p>
    The first time you compile anything it can be complicated. Rest assured, GIMP is no exception. For help with compiling your fresh stable gimp checkout, 
-   see the <a href="wgo:unix-howtos_stable_cvs_build">Build Your Stable GIMP from CVS</a> how to. 
+   see the <a href="/unix/howtos/stable-cvs-build.html">Build Your Stable GIMP from CVS</a> how to. 
 </p>
 
-<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml" -->
     <div>
       <span id="footerleft">
-        How To Get Your Stable GIMP from CVS &copy; 2002 <a mailto="bex@gimp.org">Rebecca J. Walter</a>
+        How To Get Your Stable GIMP from CVS &copy; 2002 <a href="mailto:bex@gimp.org">Rebecca J. Walter</a>
       </span>
       <span id="footerright">
-        <a mailto="webmaster@gimp.org">webmaster@gimp.org</a>
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
