--- a/unix/howtos/howto-template.html
+++ b/unix/howtos/howto-template.html
@@ -1,7 +1,8 @@
-<!--#include virtual="/includes/wgo-xhtml-init.xhtml"  -->
+<?xml version="1.0" encodings="iso-8859-1" standalone="yes"?><!--#include virtual="/includes/wgo-xhtml-init.xhtml" -->
+<!-- rewrite-attrs.py automatically generated this file from template-in.html.  Do not edit.-->
 <title>GIMP - How To Title</title>
-<!--#include virtual="/includes/wgo-look-feel.xhtml"  -->
-<!--#include virtual="/includes/wgo-howto-unix-init.xhtml"  -->
+<!--#include virtual="/includes/wgo-look-feel.xhtml" -->
+<!--#include virtual="/includes/wgo-howto-unix-init.xhtml" -->
 <h1>How To Title</h1>
 
 <h2>A subtitle</h2>
@@ -34,13 +35,13 @@ main()
   More information.
 </p>
 
-<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-howto-unix-fini.xhtml" -->
     <div>
       <span id="footerleft">
-        How To &copy; 2002 <a mailto="webmaster@gimp.org">Author name</a>
+        How To &copy; 2002 <a href="mailto:webmaster@gimp.org">Author name</a>
       </span>
       <span id="footerright">
-        <a mailto="webmaster@gimp.org">webmaster@gimp.org</a>
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
       </span>
     </div>
-<!--#include virtual="/includes/wgo-xhtml-fini.xhtml"  -->
+<!--#include virtual="/includes/wgo-xhtml-fini.xhtml" -->
